# ocs-rs

./: .gitignore  .zenodo.json  BENCHES.md  CITATION.cff  Cargo.toml  DECISIONS.md  README.md  REPORT.md
alphamate/bench/: eval_contrib.py  make_alphamate_inputs.py
examples/: bench_sexed.rs  scaling_matrixfree.rs  spike.rs
research/: MANUSCRIPT.md  MANUSCRIPT.tex  MANUSCRIPT_fr.md  MANUSCRIPT_fr.tex  PREPRINT.md  SUPPORT_FIRST.md  assemble_manuscript.py  bound_balign.py  bound_curve.py  bound_kernel.py  bound_lawfit.py  bound_packing.py  bound_predictor.py  bound_real.py  bound_validation.py  build_pdf.py  fig_scaling.py  manuscript_discussion.md  manuscript_intro.md  manuscript_methods.md  manuscript_references.md  manuscript_results.md  support_bound.tex  support_bound_fr.md  support_bound_fr.tex  support_bound_sketch.md  support_first.py  support_first_sex.py
research/repro/: REPRODUCE.md  mouse_export.R  pig_export.R  repro.sh  sf_at_ub.py  synthetic_optisel.R  wheat_export.R
src/: datagen.rs  error.rs  grm.rs  lib.rs  main.rs  report.rs  socp.rs  solve.rs  support_first.rs
