[package]
name = "ocs_rs"
version = "0.1.0"
edition = "2024"
description = "Go/no-go spike: solving genomic-scale Optimum Contribution Selection as a second-order cone program with the Clarabel interior-point solver."
license = "MIT OR Apache-2.0"

[dependencies]
# Conic interior-point solver under evaluation. This crate exists to decide
# whether its sparse IPM copes with the near-dense conic block OCS produces.
clarabel = "=0.11.1"
# Pure-Rust dense linear algebra: VanRaden GRM build (GEMM) and Cholesky.
# Only the dense `linalg` path is needed; the sparse/npy/rand features are
# dropped to keep the dependency surface (and a second `rand` major) out.
faer = { version = "=0.24.0", default-features = false, features = ["linalg", "std", "rayon"] }
# Seeded synthetic genotypes and breeding values.
rand = "=0.10.1"
rand_distr = "=0.6.0"

[profile.release]
# Representative-but-fast benchmark profile. Documented in BENCHES.md so the
# reported numbers are never mistaken for a maximally-tuned (fat-LTO) build.
opt-level = 3
lto = "thin"
