[package]
name = "ocs_rs"
version = "0.1.0"
edition = "2024"
description = "Exact, matrix-free support-first solver for genomic Optimum Contribution Selection (OCS)."
license = "MIT"

[dependencies]
# Conic interior-point solver, kept as an independent cross-check oracle for the
# support-first optimum (and this crate's original go/no-go subject).
clarabel = "=0.11.1"
# Pure-Rust dense linear algebra: VanRaden GRM build (GEMM) and Cholesky.
# Only the dense `linalg` path is needed; the sparse/npy/rand features are
# dropped to keep the dependency surface (and a second `rand` major) out.
faer = { version = "=0.24.0", default-features = false, features = ["linalg", "std", "rayon"] }
# Seeded synthetic genotypes and breeding values.
rand = "=0.10.1"
rand_distr = "=0.6.0"

[profile.release]
# Representative-but-fast benchmark profile. Documented in BENCHES.md so the
# reported numbers are never mistaken for a maximally-tuned (fat-LTO) build.
opt-level = 3
lto = "thin"
